--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "0.5.0"
-  cloud_firestore: "^0.14.0+2"
+  firebase_core: 0.5.0
+  cloud_firestore: 0.14.0+2
+  dio: 3.0.10
+  geocoding: 1.0.3
+  google_maps_flutter: 0.5.31
 
 
   # The following adds the Cupertino Icons font to your application.
