--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   dio: 3.0.10
   geocoding: 1.0.3
   google_maps_flutter: 0.5.31
+  flutter_mobx: ^1.1.0+1
+  mobx: ^1.2.1+1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +39,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mobx_codegen: ^1.1.0+1
+  build_runner: ^1.10.0
+  lint: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
