--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="motodelivery"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyC9SHrMSjri7WHEpG9wjw_bVTti0E6jm98"/>
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
