--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   google_maps_flutter: 0.5.31
   flutter_mobx: ^1.1.0+1
   mobx: ^1.2.1+1
+  # provider: ^4.3.2+2
+  get_it: ^4.0.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
